--- a/CSS/style.css
+++ b/CSS/style.css
@@ -493,7 +493,7 @@ background-color: #ffd43b;
   color: #45260a;
 }
 .cta-img-box{
-  background-image: linear-gradient(to right bottom,rgba(235, 151, 78, 0.35),rgba(230, 125, 34, 0.35)), url(/img/eating.jpg);
+  background-image: linear-gradient(to right bottom,rgba(235, 151, 78, 0.35),rgba(230, 125, 34, 0.35)), url(img/eating.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -599,4 +599,5 @@ background-color: #ffd43b;
 .footer-link:hover,
 .footer-link:active{
   color: #555;
+
 }
